스웨거 url 변경 & README 수정 & settings.gradle (book)추가